--- a/index.html
+++ b/index.html
@@ -1,15 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant Wiki</title>
-    <link rel="stylesheet" href="./css/style.css"> 
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 width=%22256%22 height=%22256%22 viewBox=%220 0 100 100%22><rect width=%22100%22 height=%22100%22 rx=%2250%22 fill=%22%23ffffff%22></rect><text x=%2250%%22 y=%2250%%22 dominant-baseline=%22central%22 text-anchor=%22middle%22 font-size=%2270%22>👻</text></svg>" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div>
-        <h1>Buenas soy Gaizka</h1>
+    
+<nav>
+    <div class="menubar">
+      <a href="#0" class="home"><img src="./img/image (1).png"/></a>
+      <div class="icons">
+        <div class="secondary-icons">
+          <i class="icon-second"><img src="https://rafaelavlucas.github.io/assets/icons/gray1/icon-171.svg"></i>
+          <i class="icon-second"><img src="https://rafaelavlucas.github.io/assets/icons/gray1/icon-198.svg"></i>
+        </div>
+        <i class="icon-menu"><span></span></i>
+      </div>
     </div>
+    <ul class="menu">
+      <li class="menu-link"><a href="#0" class="text-item">Armas</a></li>
+      <li class="menu-link sub">
+        <a href="#0" class="text-item">Skins<span class="icon"></span></a>
+        <ul class="submenu">
+          <li class="sub-item"><a href="#0">Común</a></li>
+          <li class="sub-item"><a href="#0">Raro</a></li>
+          <li class="sub-item"><a href="#0">Epico</a></li>
+          <li class="sub-item"><a href="#0">Legendario</a></li>
+        </ul>
+      </li>
+      <li class="menu-link sub">
+        <a href="#0" class="text-item">Services<span class="icon"></span></a>
+        <ul class="submenu">
+          <li class="sub-item"><a href="#0">Print Design</a></li>
+          <li class="sub-item"><a href="#0">Web Design</a></li>
+          <li class="sub-item"><a href="#0">Mobile App Development</a></li>
+        </ul>
+      </li>
+      <li class="menu-link"><a href="#0" class="text-item">Contact</a></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>Navigation with Sub-Navigation using CSS Transitions and Animations</h1>
+  <p>Made for Codepen Challenge #cpc-fork-nav #codepenchallenge</p>
+  </article>
 </body>
+<script src="./js/main.js"></script>
 </html>
